--- a/layouts/warframe-builds/list.html
+++ b/layouts/warframe-builds/list.html
@@ -41,11 +41,13 @@
                             <br/>
                             <ul class="warframes">
                               {{ range .Site.Data.warframebuilds }}
+                                {{ if .builds }}
                                 {{$warframeRoles := delimit .roles " " }}
-                                <li id="{{ .name }}" data-roles="{{ $warframeRoles }}" data-image="/images/warframes-bg/{{ .image }}" data-basics="{{ .description }}" data-builds="{{ .builds }}">
-                                  <h2>{{ .title }}</h2>
-                                  <img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
-                                </li>
+                                  <li id="{{ .name }}" data-roles="{{ $warframeRoles }}" data-image="/images/warframes-bg/{{ .image }}" data-basics="{{ .description }}" data-builds="{{ .builds }}">
+                                    <h2>{{ .title }}</h2>
+                                    <img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
+                                  </li>
+                                {{ end }}
                               {{ end }}
                             </ul>
                         </div>
