Remove redundant cast

--- a/layouts/partials/voidtrader.html
+++ b/layouts/partials/voidtrader.html
@@ -10,7 +10,7 @@
 		<tbody>
 			{{- range .inventory -}}
 				<tr>
-					<td>{{ string .item }}</td>
+					<td>{{ .item }}</td>
 					<td>{{ string .ducats }}</td>
 					<td>{{ string .credits }}</td>
 				</tr>
