Add image for warframe builds page

--- a/layouts/warframe-builds/list.html
+++ b/layouts/warframe-builds/list.html
@@ -22,7 +22,7 @@
     <header class="header">
       {{ partial "nav.html" . }}
     </header>
-    <div class="main" style="background: #444444">
+    <div class="main" class="header-filter" data-parallax="active" style="background-image: url({{ .Params.image }})">
         <div class="hestia-blogs">
             <div class="container">
                 <div class="row">
