--- a/layouts/mods/list.html
+++ b/layouts/mods/list.html
@@ -1,6 +1,37 @@
-{{ range first 12 (where .Site.Pages ".Params.layout" "primed") }}
-
-	{{.Title}}
-	{{.Params.slug}}
+{{- define "title" -}}
+{{ .Params.seoTitle | default .Title }}
+{{- if gt $.Paginator.PageNumber 1 -}}
+, Page {{ $.Paginator.PageNumber }} of {{ $.Paginator.TotalPages }} 
+{{- end -}}
+{{- end -}}
+{{ define "bodyClasses" }}archive category{{ end }}
+{{ define "header" }}
+	<div class="boxed-layout-header page-header header-small" id="primary">
+			<div class="container">
+					<div class="row">
+							<div class="col-md-10 col-md-offset-1 text-center">
+									<h1 class="hestia-title">{{ .Title }}</h1>
+									<p id="breadcrumbs-category">
+										<span xmlns:v="http://rdf.data-vocabulary.org/#">
+											<span typeof="v:Breadcrumb"><a href="{{ $.Site.BaseURL }}" rel="v:url" property="v:title">{{ .Site.Title }}</a> » 
+											<span class="breadcrumb_last">{{ .Title }}</span></span>
+										</span>
+									</p>
+									<div>{{ .Params.description }}</div>
+							</div>
+					</div>
+			</div>
+			<div class="header-filter" data-parallax="active" style="background-image: url({{ .Params.image | default .Site.Params.image }})"></div>
+	</div>
 {{ end }}
-
+{{ define "main" }}
+	<div class="hestia-blogs">
+			<div class="container">
+					<div class="row">
+						{{ range  .Paginator.Pages }}
+							{{ partial "mod-card.html" . }}
+						{{ end }}
+					</div>
+			</div>
+	</div>
+{{ end }}
