Update publish dates

--- a/layouts/mods/baro-primed.html
+++ b/layouts/mods/baro-primed.html
@@ -13,7 +13,7 @@
                 <div class="row">
 					<div class="col-md-6 col-md-push-6">
 						<div class="mod-image" style="margin-top: 50px">
-							<img src="{{ .Params.image }}" width="40%" height="40%" class="center-block" />
+							<img src="{{ .Params.image }}" width="40%" height="40%" class="center-block" title="{{ .Title }}" alt="{{ .Params.modName }} Mod" />
 						</div>
                     </div>
                     <div class="col-md-6 col-md-pull-6 archive-post-wrap">
