Add breadcrumbs to layout

--- a/layouts/mods/baro-primed.html
+++ b/layouts/mods/baro-primed.html
@@ -19,6 +19,13 @@
                     <div class="col-md-6 col-md-pull-6 archive-post-wrap">
                     	<div class="mod-info">
 		                	<h1>{{ .Title }}</h1>
+                            <p>
+                                <span xmlns:v="http://rdf.data-vocabulary.org/#">
+                                  <span typeof="v:Breadcrumb"><a href="{{ $.Site.BaseURL }}" rel="v:url" property="v:title">{{ .Site.Title }}</a> » 
+                                  <span rel="v:child" typeof="v:Breadcrumb"><a href="/mods" title="Mods in Warframe" rel="v:url" property="v:title">Mods</a> » 
+                                  <span class="breadcrumb_last">{{ .Title }}</span>
+                                </span>
+                            </p>
 		                	<p><strong>{{ .Params.modName }}</strong> are enhanced versions of the {{ .Params.originalMod }} which <b><em>{{ .Params.increases }}</em></b>. {{ .Params.modName }} is essentially the {{ .Params.originalMod }} mod with Legendary rarity and 5 more ranks. It is considered the same mod as its Rare counterpart, and thus both mods cannot be equipped together.</p>
 		                	<p>This mod can be purchased unranked from <a href="/baro-kiteer-void-trader/" title="Warframe Baro Ki'Teer Void Trader Guide">Baro Ki'Teer</a> for <b>{{ .Params.credits }} credits</b> and <b>{{ .Params.ducats }} ducats</b>. Note however that Baro Ki'Teer's stock changes with each appearance, and may not have this item available at every time. <b><em>Baro Ki'Teer is the only way to get {{ .Params.modName }} aside from buying other players</em></b>. The <b>trade tax</b> for trading {{ .Params.modName }} from another player is <b>1 million <a href="/farm-credits-750k-credits-per-hour/" title="How To Farm Credits">credits</a></b>. If you have any doubts to get {{ .Params.modName }} or not below you can see some of the builds that benefit from it.</p>
 		                	<div class="buttons"> <a href="#builds" title="See more" class="btn btn-primary btn-lg">See builds</a></div>
