--- a/layouts/mods/baro-primed.html
+++ b/layouts/mods/baro-primed.html
@@ -22,7 +22,7 @@
                             <p>
                                 <span xmlns:v="http://rdf.data-vocabulary.org/#">
                                   <span typeof="v:Breadcrumb"><a href="{{ $.Site.BaseURL }}" rel="v:url" property="v:title">{{ .Site.Title }}</a> » 
-                                  <span rel="v:child" typeof="v:Breadcrumb"><a href="/mods" title="Mods in Warframe" rel="v:url" property="v:title">Mods</a> » 
+                                  <span rel="v:child" typeof="v:Breadcrumb"><a href="/mods" title="Mods in Warframe" rel="v:url" property="v:title">Mods in Warframe</a> » 
                                   <span class="breadcrumb_last">{{ .Title }}</span>
                                 </span>
                             </p>
