--- a/layouts/fortuna/list.html
+++ b/layouts/fortuna/list.html
@@ -54,14 +54,75 @@
     <div class="hestia-blogs" style="background-color: #041625">
       <div class="container">
           <div class="row">
-              <div class="col-md-12 archive-post-wrap" >
+              <div class="col-md-12 archive-post-wrap">
+                <h2 class="hestia-title" style="color: white;">Key Features in Warframe Fortuna</h2>
+                <p class="sub-title" style="color: white;">Here are all the new major features you can expect to see from the open-world Venus update.</p>
+              </div>
+              <div class="col-md-12">
+                <div class="col-md-3">
+                    <ul class="nav nav-tabs tabs-left fortuna-features">
+                      <li class="active"><a href="#fortuna" data-toggle="tab">The Orb Vallis, The New Open World</a></li>
+                      <li><a href="#solaris" data-toggle="tab">Solaris United and Fortuna</a></li>
+                      <li><a href="#kitguns" data-toggle="tab">Build Kitgun in Fortuna</a></li>
+                      <li><a href="#conservation" data-toggle="tab">Join the Conservation Movement</a></li>
+                      <li><a href="#pets" data-toggle="tab">Build your own pet in Fortuna</a></li>
+                      <li><a href="#combat" data-toggle="tab">New Combat Experiences</a></li>
+                      <li><a href="#hoverboard" data-toggle="tab">Ride a Hoverboard in Fortuna</a></li>
+                    </ul>
+                </div>
 
-
+                <div class="col-md-9">
+                    <div class="tab-content fortuna-features-content">
+                      <article class="tab-pane active section section-text features-section" id="fortuna">
+                        <img class="alignleft" width="360" src="/images/fortuna/warframe-orb-vallis-new-open-world.jpg" title="The Orb Vallis, The New Open World" alt="Warframe Fortuna - new open world">
+                        <p>Like in the Plains of Eidolon update, the open-world area of Venus will feature a main trading and social hub. This market area is heavily inspired by Blade Runner with its monolithic elevator and buildings, not to mention plenty of neon lighting. There are canals of liquid coolant running across the settlement, which are being cleaned and refined by the inhabitants. Dotted around the central canal you will find a number of key merchants and NPCs, selling everything from make-your-own Moa pets and kitguns, to fishing supplies and tranq rifles.</p>
+                        <p>Spend some time around the hub and you’ll also learn plenty about the culture of augmented people who toil away in service of the Corpus.</p>
+                      </article>
+                      <article class="tab-pane section section-text features-section" id="solaris">
+                        <img class="alignleft" width="360" src="/images/fortuna/warframe-solaris-united-and-fortuna.jpg" title="Solaris United and Fortuna" alt="Warframe New Story Solaris United">
+                        <p>The Tennocon reveal for Warframe Fortuna gave us an early look at some of the characters and conflicts going on in this new Warframe open world. For starters, there are two factions in Fortuna: the Corpus, who are the big bad meanies running things, and Solaris United, a rebel faction working to liberate the people of Fortuna from Corpus debt-slavery.</p>
+                        <p>The leader of the Corpus colony is Nef Anyo, who you may remember from previous quests, while Eudico heads up the Solaris United. So, why are the two groups at odds? The people of Fortuna, the Solaris, are labourers who have been enslaved by the Corpus through mounting debts. They work tirelessly to keep refine and purify the coolant that keeps Venus habitable, while the Corpus profit from their labour. The Solaris United want to take back the planet and ensure nobody else succumbs to debt-slavery. Your role in all of this, naturally, is to use the power of the Tenno to aid the Solaris people.</p>
+                      </article>
+                      <article class="tab-pane section section-text features-section" id="kitguns">
+                        <img class="alignleft" width="320" src="/images/fortuna/warframe-build-kitgun-in-fortuna.jpg" title="Build Kitgun in Fortuna" alt="Warframe Build Kitgun in Fortuna">
+                        <p>Kitguns are modular firearms assembled by Rude Zuud in Fortuna on Venus. As modular weapons, Kitguns are formed from three different components that can be mixed and matched before assembly, allowing players to create different combinations of parts with the stats and abilities that they desire, as well as determine if the Kitgun is a primary or secondary weapon. Additionally, Kitguns can be given custom names when created to further personalize the weapon.</p>
+                        <p>A Kitgun consists of three different components, the Chamber, the Grip, and the Loader. Each component is centered around a particular aspect of the weapon, and these components can each have various parts to choose from, which changes the type of functionality that the component provides.</p>
+                      </article>
+                      <article class="tab-pane section section-text features-section" id="conservation">
+                        <img class="alignleft" width="320" src="/images/fortuna/warframe-fortuna-join-conservation-movement.jpg" title="Join the Conservation Movement" alt="Warframe Animal Conservation in Fortuna">
+                        <p>One of the key new features in Fortuna is animal hunting, or conservation rather, as you’ll only be tranquillising animals in order to save them from the Corpus and save the species. To save each species you'll need a specific lure and a tranq rifle, both of which you can buy from The Business in Fortuna’s hub area.</p>
+                        <p>When it comes to hunting in Warframe Fortuna, you’ll first have to find some droppings, which you will be able to analyse for clues that you can use to track the animal further. Next up, you’ll need to find some footprints and follow them, while clues like flattened or chewed plants will tip you off further. When you start to get very close you will hear a mating call that is unique to each species. This is where you use your lure to mimic the call of the animal you’re hunting - this takes the form of a minigame in which you use your mouse to copy the pitch of the mating call. Do that successfully and all that’s left to do is hide, shoot the endangered animal with a tranquilliser dart, tag it, and wait for a drone to come and whisk the little cutie away to safety.</p>
+                      </article>
+                      <article class="tab-pane section section-text features-section" id="pets">
+                        <img class="alignleft" width="320" src="/images/fortuna/warframe-build-your-own-pet-in-fortuna.png" title="Build your own pet in Fortuna" alt="Warframe New MOA Companions are waiting for you">
+                        <p>Fortuna will also let you customise your own MOA companions. MOA are Corpus enemies that resemble the Gekkos you might remember from the Metal Gear universe. These are smaller bipedal mechs, and with Fortuna, you’ll be able to choose the components you want to combine into your own mechanical combat pal. Each piece will have an impact on both the appearance and stats of your MOA buddy.</p>
+                        <p>During the demo, Digital Extremes showed off one combination that sported a top hat and bow tie, much to the delight of the audience.</p>
+                      </article>
+                      <article class="tab-pane section section-text features-section" id="combat">
+                        <img class="alignleft" width="320" src="/images/fortuna/warframe-fortuna-new-combat-experiences.jpg" title="Warframe Fortuna New Combat Experiences" alt="Warframe face up with new Spider Bots">
+                        <p>The Corpus occupiers, led by the profit-obsessed Nef Anyo, bring new technology and warriors to bear. Alongside new Corpus ground troop variants, monstrous new Spider Bot enemies of all shapes and sizes will challenge players to face their fears when they explore The Orb Vallis and face-off with the prophet of profit.</p>
+                      </article>
+                      <article class="tab-pane section section-text features-section" id="hoverboard">
+                        <img class="alignleft" width="320" src="/images/fortuna/warframe-ride-a-hoverboard-in-fortuna.jpg" title="Ride a Hoverboard in Fortuna" alt="Warframe Ride a Hoverboard in Fortuna">
+                        <p>Out in the snowy tundra that is open-world Venus, you’ll be able to use a new vehicle, the Bondi K-Drive hoverboard. This vehicle was added in response to community feedback about Archwings in the Plains of Eidolon: they let you get about quickly, but as they’re grounded you'll still get a proper sense of scope and scale when exploring.</p>
+                        <p>This being Warframe, you will be able to customise your K-Drive with different skins and possibly even models. You can also perform tricks on the K-Drive, not to mention use rocks as ramps in order to gain height or a speed advantage - we’re hoping to see K-Drive races in the future. Unfortunately, you will not be able to fire your weapons from the hoverboard, although, it's being considered. However, there will be some melee attacks that incorporate the new Warframe vehicle.</p>
+                      </article>
+                    </div>
+                </div>
               </div>
           </div>
       </div>
     </div>
   </div>
+  <footer class="footer footer-black footer-big" style="background-color: #141e23;">
+    <div class="container">
+        <div class="hestia-bottom-footer-content">
+            <div class="hestia-bottom-footer-content">
+                <div class="copyright pull-left"><a href="{{ .Site.BaseURL }}">Warframe Blog</a> has no official link with Digital Extremes or Warframe, we are just a fan site.</div>
+            </div>
+        </div>
+    </div>
+</footer>
 {{ end }}
 {{ define "custom-scripts"}}
   <script src="/assets/js/fortuna.js"></script>
