Fix missing endings of tags

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="nav navbar-nav navbar-right" id="menu-main-menu">
                 <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="News" href="{{ .Site.BaseURL }}warframe-news/">News</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown"><a class="dropdown-toggle" title="Guides" href="{{ .Site.BaseURL }}guides/" data-toggle="dropdown" aria-haspopup="true">Guides <span class="caret"></a></span>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown"><a class="dropdown-toggle" title="Guides" href="{{ .Site.BaseURL }}guides/" data-toggle="dropdown" aria-haspopup="true">Guides <span class="caret"></span></a>
                 	<ul class="dropdown-menu" role="menu">
                         <li class="menu-item menu-item-type-post_type menu-item-object-page"><a title="Warframe Fortuna" href="{{ .Site.BaseURL }}fortuna/">Warframe Fortuna</a></li>
                     </ul>
