Split index.scss

--- a/themes/warframe/layouts/index.html
+++ b/themes/warframe/layouts/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic" type="text/css" media="all">
 </head>
 <body>
-	<section class="hero is-primary is-large frame-hero angled-bottom-left">
+	<section class="hero is-primary is-medium frame-hero-section" style="background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url('https://i.redd.it/h476ie38fbez.jpg');">
 		<div class="hero-head">
 			{{- partial "navbar.html" . -}}
 		</div>
@@ -19,9 +19,9 @@
 						<p>
 							Excalibur is one of the three starter Warframes a new player can select. Excalibur is a master swordsman and his abilities allow him to bring forth his summoned blade, cutting enemies in his path, while also presenting options for mobility and defense.
 						</p>
-						<!-- <p class="subtitle">
+						<p class="subtitle">
 							Excalibur’s passive is called Swordsmanship. He receives a bonus to melee damage and attack speed while wielding a sword type melee weapon. Swords, dual swords, rapiers and nikanas all benefit from his passive.
-						</p> -->					
+						</p>					
 					</div>
 				</div>
 			</div>			
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section frame-ability frame-second-ability">
+	<section class="section frame-second-ability">
 		<div class="container has-text-left">
 			<div class="columns">
 				<div class="column is-offset-2-desktop is-3-desktop is-offset-1-tablet is-3-tablet is-offset-3-mobile is-half-mobile">
