--- a/themes/warframe/layouts/partials/frame-page/frame-ability-info.html
+++ b/themes/warframe/layouts/partials/frame-page/frame-ability-info.html
@@ -1,4 +1,4 @@
-<h3 class="ability-title">Slash Dash</h3>
+<h2 class="frame-page-title">Slash Dash</h2>
 <p class="abiility-description">
 	His first ability is Slash Dash. Excalibur dashes between enemies in front of him and cuts them with his exalted blade. Enemies that survive the strike will be knocked down. If there are no enemies in front of Excalibur, he will perform a dash in the direction you’re looking at. During Slash Dash, Excalibur is immune to damage and if you press the melee attack button during the dash, Excalibur will stop and instantly equip his melee weapon.
 </p>
