Implement navbar interaction

--- a/themes/warframe/layouts/index.html
+++ b/themes/warframe/layouts/index.html
@@ -20,7 +20,7 @@
 							Excalibur is one of the three starter Warframes a new player can select. Excalibur is a master swordsman and his abilities allow him to bring forth his summoned blade, cutting enemies in his path, while also presenting options for mobility and defense.
 						</p>
 						<p class="subtitle">
-							Excalibur’s passive is called Swordsmanship. He receives a bonus to melee damage and attack speed while wielding a sword type melee weapon. Swords, dual swords, rapiers and nikanas all benefit from his passive.
+							<strong>Excalibur’s passive</strong> is called Swordsmanship. He receives a bonus to melee damage and attack speed while wielding a sword type melee weapon. Swords, dual swords, rapiers and nikanas all benefit from his passive.
 						</p>					
 					</div>
 				</div>
@@ -53,5 +53,7 @@
 			</div>
 		</div>
 	</section>
+
+	<script src='/assets/js/navbar.js'></script>
 </body>
 </html>
