--- a/themes/warframe/layouts/partials/navbar.html
+++ b/themes/warframe/layouts/partials/navbar.html
@@ -1,30 +1,30 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
 	<div class="container">
 		<div class="navbar-brand">
 			<a class="navbar-item" href="https://bulma.io">
 				Warframe Blog
 			</a>
 
-			<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+			<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar-menu">
 				<span aria-hidden="true"></span>
 				<span aria-hidden="true"></span>
 				<span aria-hidden="true"></span>
 			</a>
 		</div>
-		<div class="navbar-menu">
+		<div id="navbar-menu" class="navbar-menu">
 			<div class="navbar-start">
 			</div>
 
 			<div class="navbar-end">
 				<a class="navbar-item">News</a>
-				<div class="navbar-item has-dropdown">
+				<div class="navbar-item has-dropdown is-hoverable">
 					<a class="navbar-link">Guides</a>
 					<div class="navbar-dropdown">
 						<a class="navbar-item">Warframe Fortuna</a>
 					</div>
 				</div>
 				<a class="navbar-item">Farming</a>
-				<div class="navbar-item has-dropdown">
+				<div class="navbar-item has-dropdown is-hoverable">
 					<a class="navbar-link">Builds</a>
 					<div class="navbar-dropdown">
 						<a class="navbar-item">Warframe Builds</a>
