--- a/themes/warframe/layouts/index.html
+++ b/themes/warframe/layouts/index.html
@@ -41,7 +41,31 @@
 			</div>
 		</div>
 	</section>
-	<section class="section frame-second-ability">
+	<section class="section frame-ability frame-second-ability">
+		<div class="container has-text-left">
+			<div class="columns">
+				<div class="column is-offset-2-desktop is-3-desktop is-offset-1-tablet is-3-tablet is-offset-3-mobile is-half-mobile">
+					{{- partial "frame-page/frame-ability-image.html" . -}}
+				</div>
+				<div class="column is-5-desktop is-7-tablet is-12-mobile">
+					{{- partial "frame-page/frame-ability-info.html" . -}}
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section frame-ability frame-third-ability">
+		<div class="container has-text-right">
+			<div class="columns is-reverse-mobile">
+				<div class="column is-offset-2-desktop is-5-desktop is-offset-1-tablet is-7-tablet is-12-mobile">
+					{{- partial "frame-page/frame-ability-info.html" . -}}
+				</div>
+				<div class="column is-3-desktop is-3-tablet is-offset-3-mobile is-half-mobile">
+					{{- partial "frame-page/frame-ability-image.html" . -}}
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section frame-ability frame-fourth-ability">
 		<div class="container has-text-left">
 			<div class="columns">
 				<div class="column is-offset-2-desktop is-3-desktop is-offset-1-tablet is-3-tablet is-offset-3-mobile is-half-mobile">
