--- a/themes/warframe/src/scss/frame-page/layout/_frame-ability-section.scss
+++ b/themes/warframe/src/scss/frame-page/layout/_frame-ability-section.scss
@@ -1,27 +1,40 @@
 @import '~angled-edges/_angled-edges';
 
 .frame-ability {
-	background-color: #4c5c96;
-
+	position: relative;
 //4c5c96
 // 45558d
 //#3f4e85
 //35457d
+}
+
+.frame-first-ability {
+	background-color: #4c5c96;
+
 	@include angled-edge('outside top', 'upper left', #4c5c96);
 	@include angled-edge('outside bottom', 'lower left', #4c5c96);
 }
 
 .frame-second-ability {
-	background-color: #45558d;
-	position: relative;
+	background-color: #455489;
+	margin-top: 98px;
+	@include angled-edge('outside top', 'upper right', #455489);
+	@include angled-edge('outside bottom', 'lower right', #455489);
+}
+
+.frame-third-ability {
+	background-color: #3f4c7c;
 	margin-top: 98px;
 
-//4c5c96
-// 45558d
-//#3f4e85
-//35457d
-	@include angled-edge('outside top', 'upper right', #45558d);
-	@include angled-edge('outside bottom', 'lower right', #45558d);
+	@include angled-edge('outside top', 'upper left', #3f4c7c);
+	@include angled-edge('outside bottom', 'lower left', #3f4c7c);
+}
+
+.frame-fourth-ability {
+	background-color: #38446f;
+	margin-top: 98px;
+	@include angled-edge('outside top', 'upper right', #38446f);
+	@include angled-edge('outside bottom', 'lower right', #38446f);
 }
 
 .abiility-description {
