--- a/themes/warframe/src/scss/frame-page/base/_bulma.scss
+++ b/themes/warframe/src/scss/frame-page/base/_bulma.scss
@@ -7,6 +7,8 @@ $navbar-dropdown-border-top: $navbar-background-color;
 $navbar-dropdown-arrow: #ffffff;
 $navbar-tab-hover-background-color: $navbar-background-color;
 
+$card-background-color: #353849;
+
 @import '~bulma/sass/utilities/_all';
 @import '~bulma/sass/base/_all';
 @import '~bulma/sass/elements/_all';
