Fix styles for frame abilities when page scales

--- a/themes/warframe/layouts/index.html
+++ b/themes/warframe/layouts/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic" type="text/css" media="all">
 </head>
 <body>
-	<section class="hero is-primary is-large frame-hero-section" style="background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url('/assets/img/bg.jpg');">
+	<section class="hero is-primary is-medium frame-hero-section" style="background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url('/assets/img/bg.jpg');">
 		<div class="hero-head">
 			{{- partial "navbar.html" . -}}
 		</div>
