--- a/themes/warframe/src/scss/frame-page/layout/_frame-builds-section.scss
+++ b/themes/warframe/src/scss/frame-page/layout/_frame-builds-section.scss
@@ -1,7 +1,4 @@
-@import '~angled-edges/_angled-edges';
-
 .frame-builds-section {
 	background-color: #2e3141;
-	margin-top: 98px;
-	@include angled-edge('outside top', 'upper left', #2e3141);
+	padding: 150px;
 }
