--- a/themes/warframe/layouts/partials/frame-page/frame-ability-image.html
+++ b/themes/warframe/layouts/partials/frame-page/frame-ability-image.html
@@ -1,3 +1,3 @@
 <figure class="image is-1by1">
-	<img class="is-rounded" src="https://n9e5v4d8.ssl.hwcdn.net/uploads/160197b351de65d6f627322ffbd7215e.png">
+	<img class="is-rounded" src="{{ .ability.image }}">
 </figure>
