Add beneficial mods paragraph

--- a/themes/warframe/layouts/index.html
+++ b/themes/warframe/layouts/index.html
@@ -83,6 +83,8 @@
 			<div class="columns has-text-left">
 				<div class="column is-offset-2 is-8">
 					<h2 class="frame-page-title">{{ $frame.name }} Builds</h2>
+					<p>{{ $frame.affectedByMods }}</p>
+					<p>So, all things considered, here are some builds you may want to try on your {{ $frame.name }}:</p>
 				</div>
 			</div>
 			<div class="columns is-multiline">
