--- a/themes/warframe/src/scss/frame-page/layout/_frame-hero-section.scss
+++ b/themes/warframe/src/scss/frame-page/layout/_frame-hero-section.scss
@@ -1,7 +1,5 @@
-.frame-hero-section {
-	background-color: #2e3141;
-	background-size: auto, cover;
-	background-position: center, center;
+.hero.is-primary.frame-hero-section {
+	background-color: transparent;
 	position: relative;
 }
 
