Add edge to the build section

--- a/themes/warframe/src/scss/frame-page/layout/_frame-builds-section.scss
+++ b/themes/warframe/src/scss/frame-page/layout/_frame-builds-section.scss
@@ -2,4 +2,5 @@
 	background-color: #2e3141;
 	padding-top: 150px;
 	padding-bottom: 150px;
+	@include angled-edge('outside bottom', 'lower right', #2e3141);
 }
